[Fix] axios 에러 수정 3

--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -290,7 +290,7 @@
                                             <div class="main_detail__comments_dropdown_menu">
                                                 <div class="main_detail__comments_dropdown_menu_revise">
                                                     <button
-                                                        onclick="changeReCmtForm({{recomment.id}}, '{{recomment.content}}');">수정</button>
+                                                        onclick="changeReCmtForm({{commnet.id}}, {{recomment.id}}, '{{recomment.content}}');">수정</button>
                                                 </div>
                                                 <div class="main_detail__comments_dropdown_menu_delete">
                                                     <button onclick="onClickdeleteRecmt({{recomment.id}});">삭제</button>
