[Fix] axios 삭제 에러 수정

--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -293,7 +293,7 @@
                                                         onclick="changeReCmtForm({{comment.id}}, {{recomment.id}}, '{{recomment.content}}');">수정</button>
                                                 </div>
                                                 <div class="main_detail__comments_dropdown_menu_delete">
-                                                    <button onclick="onClickdeleteRecmt({{recomment.id}});">삭제</button>
+                                                    <button onclick="onClickdeleteRecmt({{comment.id}}, {{recomment.id}});">삭제</button>
                                                 </div>
                                             </div>
                                         </div>
