--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -690,23 +690,22 @@
 					content: updateValue
 				}
 			}).then(function (response) {
-				const { id, content } = response['data'];
+				const { id, content, comment } = response['data'];
+                console.log(comment.user.profile_img.url)
 				const reviseCmt = document.querySelector(`.main_detail__comment__contents__reply_bundle__${id}`);
-				reviseCmt.innerHTML = `<div>
+                if (comment.user.profile_img.url) {
+                    reviseCmt.innerHTML = `<div>
 		            <div class="main_detail__comment__contetns__profile_userinfo">
 		              <span style="font-size: 1.25rem; font-weight: 600">ㄴ</span>
 		              <div id="main_detail__comment__contents__img">
-		                {% if recomment.user.profile_img %}
-		                <img src="{{comment.user.profile_img.url}}" width="45px" alt="profile_img" />
-		                <img src="/static/img/moco_symbol.png" width="45px" alt="profile_img" />
-		                {% endif %}
+		                <img src="${comment.user.profile_img.url}" width="45px" alt="profile_img" />
 		              </div>
 		              <div id="main_detail__comments__contents__info">
 		                <div id="main_detail__comments__contents__name">
-		                  <span>{{recomment.user.nickname}}</span>
+		                  <span>${comment.user.nickname}</span>
 		                </div>
 		                <div id="main_detail__comments__contents__time">
-		                  <span>{{recomment.published_at|date:"Y. m. d" }}</span>
+		                  <span>${comment.published_at|date:"Y. m. d" }</span>
 		                </div>
 		              </div>
 		            </div>
@@ -729,6 +728,44 @@
 		              </div>
 		            </div>
 		          </div>`;
+
+                } else {
+                    reviseCmt.innerHTML = `<div>
+		            <div class="main_detail__comment__contetns__profile_userinfo">
+		              <span style="font-size: 1.25rem; font-weight: 600">ㄴ</span>
+		              <div id="main_detail__comment__contents__img">
+		                <img src="/static/img/moco_symbol.png" width="45px" alt="profile_img" />
+		              </div>
+		              <div id="main_detail__comments__contents__info">
+		                <div id="main_detail__comments__contents__name">
+		                  <span>${comment.user.nickname}</span>
+		                </div>
+		                <div id="main_detail__comments__contents__time">
+		                  <span>${comment.published_at|date:"Y. m. d" }</span>
+		                </div>
+		              </div>
+		            </div>
+		            <div class="reply_txt">${content}</div>
+		          </div>
+		          <div>
+		            <div class="main_detail__comments__contents__options">
+		              <div class="main_detail__comments_revise_delete_btn">
+		                <div class="main_detail__comments_dropdown_btn">
+		                  <i class="fa-solid fa-ellipsis fa-lg" style="color: #bfbfbf"></i>
+		                </div>
+		                <div class="main_detail__comments_dropdown_menu">
+		                  <div class="main_detail__comments_dropdown_menu_revise">
+		                    <button onclick="changeReCmtForm(${parentId}, ${id}, '${content}');">수정</button>
+		                  </div>
+		                  <div class="main_detail__comments_dropdown_menu_delete">
+		                    <button onclick="onClickdeleteRecmt(${parentId}, ${id});">삭제</button>
+		                  </div>
+		                </div>
+		              </div>
+		            </div>
+		          </div>`;
+
+                }
 			});
 		};
 
