--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -704,7 +704,7 @@
 		              </div>
 		              <div id="main_detail__comments__contents__info">
 		                <div id="main_detail__comments__contents__name">
-		                  <span>${comment.user.nickname}</span>
+		                  <span>{{recomment.user.nickname}}</span>
 		                </div>
 		                <div id="main_detail__comments__contents__time">
 		                  <span>{{recomment.published_at|date:"Y. m. d" }}</span>
