--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -222,21 +222,21 @@
                                         <span>{{comment.published_at|date:"Y. m. d" }}</span>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="main_detail__comments__contents__options">
-                                {% if comment.user == request.user %}
-                                <div class="main_detail__comments_dropdown_btn">
-                                    <i class="fa-solid fa-ellipsis fa-lg" style="color: #BFBFBF"></i>
-                                </div>
-                                <div class="main_detail__comments_dropdown_menu">
-                                    <div class="main_detail__comments_dropdown_menu_revise">
-                                        <button onclick="changeCmtForm({{comment.id}}, '{{comment.content}}');">수정</button>
+                                <div class="main_detail__comments__contents__options">
+                                    {% if comment.user == request.user %}
+                                    <div class="main_detail__comments_dropdown_btn">
+                                        <i class="fa-solid fa-ellipsis fa-lg" style="color: #BFBFBF"></i>
                                     </div>
-                                    <div class="main_detail__comments_dropdown_menu_delete">
-                                        <button onclick="onClickdelete({{comment.id}});">삭제</button>
+                                    <div class="main_detail__comments_dropdown_menu">
+                                        <div class="main_detail__comments_dropdown_menu_revise">
+                                            <button onclick="changeCmtForm({{comment.id}}, '{{comment.content}}');">수정</button>
+                                        </div>
+                                        <div class="main_detail__comments_dropdown_menu_delete">
+                                            <button onclick="onClickdelete({{comment.id}});">삭제</button>
+                                        </div>
                                     </div>
+                                    {% endif%}
                                 </div>
-                                {% endif%}
                             </div>
                         </div>
                         <div id="main_detail__comment__contents__txt__{{comment.id}}">
@@ -250,10 +250,10 @@
                             <div id="main_detail_comment_contents_reply_form__{{comment.id}}"></div>
                         </div>
                         <div id="main_detail__comment__contents__reply__{{comment.id}}" 
-                        style="padding: 20px 0; border-top: 1px solid #bfbfbf;">
+                        style="padding-top: 20px; border-top: 1px solid #bfbfbf;">
                             {% for recomment in comment.comment_set.all %}
                             <div class="main_detail__comment__contents__reply_bundle__{{recomment.id}}">
-                                <div>
+                                <div style="display: flex; justify-content: space-between;">
                                     <div class="main_detail__comment__contetns__profile_userinfo">
                                         <span style="font-size:1.25rem; font-weight: 600;">ㄴ</span>
                                         <div id="main_detail__comment__contents__img">
@@ -273,32 +273,32 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="reply_txt">
-                                        {% if recomment.user != comment.user %}
-                                        <span style="color: #2253FF;">@{{comment.user.nickname}} </span>
-                                        {% endif %}
-                                        {{recomment.content}}
+                                    <div>
+                                        <div class="main_detail__comments__contents__options">
+                                            {% if recomment.user == request.user %}
+                                            <div class="main_detail__comments_revise_delete_btn">
+                                                <div class="main_detail__comments_dropdown_btn">
+                                                    <i class="fa-solid fa-ellipsis fa-lg" style="color: #BFBFBF"></i>
+                                                </div>
+                                                <div class="main_detail__comments_dropdown_menu">
+                                                    <div class="main_detail__comments_dropdown_menu_revise">
+                                                        <button
+                                                            onclick="changeReCmtForm({{comment.id}}, {{recomment.id}}, '{{recomment.content}}');">수정</button>
+                                                    </div>
+                                                    <div class="main_detail__comments_dropdown_menu_delete">
+                                                        <button onclick="onClickdeleteRecmt({{comment.id}}, {{recomment.id}});">삭제</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            {% endif%}
+                                        </div>
                                     </div>
                                 </div>
-                                <div>
-                                    <div class="main_detail__comments__contents__options">
-                                        {% if recomment.user == request.user %}
-                                        <div class="main_detail__comments_revise_delete_btn">
-                                            <div class="main_detail__comments_dropdown_btn">
-                                                <i class="fa-solid fa-ellipsis fa-lg" style="color: #BFBFBF"></i>
-                                            </div>
-                                            <div class="main_detail__comments_dropdown_menu">
-                                                <div class="main_detail__comments_dropdown_menu_revise">
-                                                    <button
-                                                        onclick="changeReCmtForm({{comment.id}}, {{recomment.id}}, '{{recomment.content}}');">수정</button>
-                                                </div>
-                                                <div class="main_detail__comments_dropdown_menu_delete">
-                                                    <button onclick="onClickdeleteRecmt({{comment.id}}, {{recomment.id}});">삭제</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        {% endif%}
-                                    </div>
+                                <div class="reply_txt">
+                                    {% if recomment.user != comment.user %}
+                                    <span style="color: #2253FF;">@{{comment.user.nickname}} </span>
+                                    {% endif %}
+                                    {{recomment.content}}
                                 </div>
                             </div>
                             {% endfor%}
