[fix] notice 글 간격 css 수정

--- a/static/css/notice_detail.css
+++ b/static/css/notice_detail.css
@@ -18,9 +18,8 @@
   display: flex;
 }
 
-.content-bottom > p {
-  font-size: 1.1rem;
-  line-height: 1.75rem;
+.content-bottom {
+  line-height: 1.5rem;
 }
 
 .content-title {
