[fix] place detail 댓글 프로필 css 수정

--- a/place/templates/place/detail.html
+++ b/place/templates/place/detail.html
@@ -437,7 +437,7 @@ function place_like(id) {
         <div class="place_detail__reply_top">
           <div class="place_detail__comment__contetns__profile_userinfo">
             <span style="font-size:1.25rem; font-weight: 600;">ㄴ </span>
-            <div id="place_detail__comment__contents__img">
+            <div id="place_detail__comment__contents__img" style="width: 2.5rem; height: 2.5rem;">
               {% if recomment.user.profile_img %}
               <img src="{{recomment.user.profile_img.url}}" width="45px" alt="profile_img"></img>
               {% else %}
