--- a/static/css/place_detail.css
+++ b/static/css/place_detail.css
@@ -262,8 +262,10 @@
 }
 
 #place_detail__comment__contents__img img{
-	width: 2.5rem;
-	height: 2.5rem;
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	border-radius: 80%;
 }
 
 #place_detail__comment__contents {
