[fix] place detail 댓글 프로필 css 수정

--- a/place/templates/place/detail.html
+++ b/place/templates/place/detail.html
@@ -150,7 +150,7 @@
                   <img src="/static/img/moco_symbol.png" width="45px" alt="profile_img"></img>
                   {% endif %}
                 </div>
-                <div id="place_detail__comments__contents__info">
+                <div id="place_detail__comments__contents__info" style="padding-left: 15px;">
                   <div id="place_detail__comments__contents__name">
                     <span>{{comment.user.nickname}}</span>
                   </div>
@@ -200,7 +200,7 @@
                       <img src="/static/img/moco_symbol.png" width="45px" alt="profile_img"></img>
                       {% endif %}
                     </div>
-                    <div id="place_detail__comments__contents__info">
+                    <div id="place_detail__comments__contents__info" style="padding-left: 15px;">
                       <div id="place_detail__comments__contents__name">
                         <span>{{recomment.user.nickname}}</span>
                       </div>
@@ -444,7 +444,7 @@ function place_like(id) {
               <img src="/static/img/moco_symbol.png" width="45px" alt="profile_img"></img>
               {% endif %}
             </div>
-            <div id="place_detail__comments__contents__info">
+            <div id="place_detail__comments__contents__info" style="padding-left: 15px;">
               <div id="place_detail__comments__contents__name">
                 <span>{{recomment.user.nickname}}</span>
               </div>
