--- a/static/css/profile_view.css
+++ b/static/css/profile_view.css
@@ -22,6 +22,7 @@
   padding: 0.75rem 2rem;
   font-size: 1rem;
   font-weight: 600;
+  white-space:nowrap;
 }
 
 .profile-top__edit a:hover{
@@ -57,6 +58,7 @@
 .profile-top__edit h1 {
   font-weight: 700;
   font-size: 2rem;
+  white-space: nowrap;
 }
 
 .profile-top__bottom {
