--- a/static/css/profile_view.css
+++ b/static/css/profile_view.css
@@ -327,5 +327,16 @@
   .profile-bottom__list p{
     white-space: nowrap;
   }
+}
 
+@media screen and (max-width: 480px) {
+  .profile-top__left img {
+    margin-right: 2rem;
+    width: 8rem;
+    height: 8rem;
+  }
+
+  .profile-top__edit h1 {
+    font-size: 1.75rem;
+  }
 }
